--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ h1 {
   opacity: 0;
   visibility: hidden;
   transform: translateX(300px);
+  z-index: 1;
 }
 .popupDisplay {
   opacity: 1;
@@ -34,4 +35,8 @@ h1 {
 img {
   height: 300px;
   margin-top: 10px;
+  transition: 0.1s ease;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 340px;
 }
