--- a/style.css
+++ b/style.css
@@ -2,6 +2,29 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
 }
+.circle {
+  border-radius: 150px;
+  border: 2px solid salmon;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: -30px;
+  top: -30px;
+}
+.c1 {
+  height: 20px;
+  width: 20px;
+  transition: 120ms ease-out;
+}
+.c2 {
+  height: 30px;
+  width: 30px;
+  transition: 260ms ease-out;
+}
+.c3 {
+  height: 45px;
+  width: 45px;
+  transition: 360ms ease-out;
+}
 h1 {
   transition: 0.2s ease;
   user-select: none;
