--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 * {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  list-style-type: none;
+}
+body {
+  cursor: crosshair;
   text-align: center;
+  min-height: 200vh;
+  margin: 0;
 }
 .circle {
   border-radius: 150px;
@@ -9,6 +15,7 @@
   transform: translate(-50%, -50%);
   left: -30px;
   top: -30px;
+  z-index: 10;
 }
 .c1 {
   height: 20px;
@@ -25,10 +32,37 @@
   width: 45px;
   transition: 360ms ease-out;
 }
+nav {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  position: fixed;
+  width: 100%;
+  background: skyblue;
+  height: 50px;
+  top: -50px;
+  z-index: 40;
+  transition: 0.4s;
+}
+h2,
+ul {
+  margin: 0;
+  padding: 10px;
+  text-align: left;
+}
+ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
 h1 {
   transition: 0.2s ease;
   user-select: none;
   padding: 10px;
+  margin-top: 50px;
+}
+button {
+  z-index: 20;
+  position: relative;
 }
 .styleH1 {
   border-radius: 20px;
