--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   transform: translate(-50%, -50%);
   left: -30px;
   top: -30px;
-  z-index: 10;
+  z-index: -10;
 }
 .c1 {
   height: 20px;
@@ -96,4 +96,34 @@ img {
   position: absolute;
   transform: translate(-50%, -50%);
   top: 340px;
+}
+.theme-container {
+  position: absolute;
+  top: 30px;
+  left: 20px;
+}
+.theme {
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+  border-radius: 150px;
+}
+#dark {
+  background: black;
+}
+#orange {
+  background: orange;
+}
+#skyblue {
+  background: skyblue;
+}
+.dark-theme {
+  background: black;
+  color: white;
+}
+.orange-theme {
+  background: orange;
+}
+.skyblue-theme {
+  background: skyblue;
 }
