--- a/DATA/style.css
+++ b/DATA/style.css
@@ -1,12 +1,19 @@
 body {
   display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
 }
 .card {
+  flex: 1 0 20%;
+  min-width: 200px;
   border: 2px solid salmon;
   text-align: center;
   padding: 10px;
   margin: 10px;
-  width: 300px;
+  transition: 0.2s;
+}
+.card:hover {
+  transform: scale(1.3);
 }
 ul {
   padding: 0;
