--- a/Sidebar/style.css
+++ b/Sidebar/style.css
@@ -62,6 +62,19 @@ li:hover {
 #side-bar.active {
   left: 0;
 }
+#side-bar.active span {
+  position: absolute;
+}
+#side-bar.active span:nth-child(1) {
+  transform: rotate(45deg);
+  top: 0;
+}
+#side-bar.active span:nth-child(2) {
+  opacity: 0;
+}
+#side-bar.active span:nth-child(3) {
+  transform: rotate(-45deg);
+}
 #side-bar.active ~ .content {
   opacity: 0.3;
 }
