--- a/1_DOM/style.css
+++ b/1_DOM/style.css
@@ -1,3 +1,6 @@
+body {
+  transition: 0.3s;
+}
 .popup {
   position: fixed;
   background: teal;
@@ -7,6 +10,38 @@
   right: -300px;
   transition: 0.6s ease;
 }
+.theme-container {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+#dark {
+  background: black;
+}
+#lime {
+  background: lime;
+}
+#peru {
+  background: peru;
+}
+.theme {
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+  border-radius: 30px;
+}
+.dark-theme {
+  background: rgb(17, 17, 17);
+  color: rgb(248, 248, 248);
+}
+.lime-theme {
+  background: lime;
+  color: black;
+}
+.peru-theme {
+  background: peru;
+  color: white;
+}
 h1 {
   user-select: none;
 }
@@ -15,6 +50,7 @@ h1 {
   position: absolute;
   transform: translate(-50%, -50%);
 }
+
 .active {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
