--- a/exo_DOM/5_sidebar/style.css
+++ b/exo_DOM/5_sidebar/style.css
@@ -59,3 +59,22 @@ li:hover {
   background: #292929;
   color: #fcfcfb;
 }
+#side-bar.active {
+  left: 0;
+}
+#side-bar.active span {
+  position: absolute;
+}
+#side-bar.active span:nth-child(1) {
+  transform: rotate(45deg);
+  top: 0;
+}
+#side-bar.active span:nth-child(2) {
+  opacity: 0;
+}
+#side-bar.active span:nth-child(3) {
+  transform: rotate(-45deg);
+}
+#side-bar.active ~ .content {
+  opacity: 0.3;
+}
