--- a/exo_APP_API/3_userApp/style.css
+++ b/exo_APP_API/3_userApp/style.css
@@ -2,33 +2,42 @@
   margin: 0;
 }
 body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-align: center;
+}
+h1 {
+  margin: 20px 0 30px;
+}
+.search-container {
+  margin: 0 auto;
+  text-align: center;
+}
+button {
+  background: rgb(250, 77, 77);
+  border-radius: 5px;
+  border: none;
+  padding: 5px 10px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+#app {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
   width: 90%;
 }
 .card {
-  flex: 1 0 30%;
+  flex: 1 0 20%;
+  min-width: 200px;
+  max-width: 450px;
   margin: 10px;
   padding: 20px 20px 0;
-  text-align: center;
   border-radius: 8px;
-  width: 350px;
-  background: #fff2e1;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
   box-shadow: 0 1px 6px rgba(51, 51, 51, 0.192);
   position: relative;
   min-height: 260px;
   display: grid;
   overflow: hidden;
-}
-.card::before {
-  content: "";
-  height: 76px;
-  width: 100%;
-  position: absolute;
-  background: url(https://picsum.photos/600/100) center/cover;
-  filter: opacity(0.7) grayscale(80%);
 }
 img {
   border-radius: 150px;
