--- a/exo_APP_API/5_meetApp/style.css
+++ b/exo_APP_API/5_meetApp/style.css
@@ -8,22 +8,18 @@ body {
 h1 {
   margin: 20px 0 30px;
 }
-.search-container {
-  margin: 0 auto;
-  text-align: center;
-}
 button {
-  background: rgb(250, 77, 77);
+  background: rgb(238, 91, 91);
   border-radius: 5px;
   border: none;
   padding: 5px 10px;
   margin-bottom: 10px;
   cursor: pointer;
 }
-#app {
+#appDisplay {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 auto;
+  margin: 20px auto;
   width: 90%;
 }
 .card {
@@ -33,26 +29,21 @@ button {
   margin: 10px;
   padding: 20px 20px 0;
   border-radius: 8px;
-  box-shadow: 0 1px 6px rgba(51, 51, 51, 0.192);
-  position: relative;
-  min-height: 260px;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.267);
+  min-height: 280px;
   display: grid;
-  overflow: hidden;
 }
 img {
   border-radius: 150px;
   margin: 4px auto 0;
-  height: 100px;
-  display: block;
-  box-shadow: 0 2px 6px rgba(51, 51, 51, 0.652);
-  z-index: 2;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.267);
 }
 h3 {
   text-transform: uppercase;
   letter-spacing: 1px;
   font-size: 1.2rem;
 }
-em,
-p {
+p,
+em {
   font-size: 0.9rem;
 }
