--- a/1_cours_DOM/style.css
+++ b/1_cours_DOM/style.css
@@ -1,6 +1,7 @@
 body {
   text-align: center;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  min-height: 300vh;
 }
 h1 {
   position: absolute;
